--- a/styles/stylesCv.css
+++ b/styles/stylesCv.css
@@ -6,6 +6,10 @@ body{
     background-color: rgba(96,125,139,0.3);
 }
 
+.sectionTitle{
+    margin: 30px 0px 30px 0px;
+}
+
 .heading{
     margin: 14px 0px 150px 10px;
 }
@@ -22,15 +26,20 @@ body{
 }
 
 .progress{
-    width: 25%;
+    width: 40%;
 }
 
-/* .copyrightSection{
+ul#socialMenu li{
+    display: inline;
+}
+
+.copyrightSection{
     background-color: #000;
     color: #fff;
     padding: 30px 5px;
+    text-align: center;
 }
 
 .copyrightSection p{
     margin: 0;
-} */
+}
