--- a/styles/stylesCv.css
+++ b/styles/stylesCv.css
@@ -1,5 +1,6 @@
 html {
-    background-color: #444;
+    background-color: rgba(96, 125, 139, 0.5);
+    height: 150px;
     padding: 0 1em;
 }
 
@@ -35,7 +36,7 @@ a {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: var(--dark-purple);
+    background-color: rgb(96, 125, 139);
     height: 150px;
 }
 
@@ -76,7 +77,7 @@ a {
 
 .section-left {
     flex: 1;
-    background-color: var(--yellowish);
+    border-right: 1px solid #607D8B;
 }
 
 .section-left ul {
@@ -110,6 +111,8 @@ h4 {
     font-style: italic;
     letter-spacing: 1px;
 }
+
+
 
 .section-right {
     flex: 2;
