--- a/styles/style.css
+++ b/styles/style.css
@@ -125,8 +125,9 @@ width: 100%;
     border: 1px solid #607D8B;
     border-radius: 2px;
     color: #607D8B;
-    padding: 1em 1.5em;
+    font-size: 18px;
     text-decoration: none;
+    padding: 5px 3px;
    }
  
    .cv:hover{
@@ -313,140 +314,48 @@ form #submit:hover{
     font-weight: 400;
 }
 
-/* portfolio page styles */
+/* projects page styles */
 
-.filter{
-    text-align: center;
-    width: 100%;
-}
-
-section .heading{
-    text-align: center;
-    padding-bottom: 40px;
-    width: 100%;
-}
-
-.filter a{
-    color: #bdc3c7;
-    border: 1px solid #bdc3c7;
-    padding: 10px 18px;
-    display: block;
-}
-
-.filter li{
-    display: inline-block;
-    padding: 5px;
-}
-
-.filter .current{
-    background-color: #607D8B;
-    border-color: #607D8B;
-    color: #fff;
-}
-
-.itemsContainer{
-    width: 100%;
-}
-
-.items li{
-    display: inline-block;
-    padding: 5px;
-}
-
-.items li img{
-    width: 100%;
-    -webkit-transition: all 0.2s linear, 1s;
-    -moz-transition: all 0.2s linear, 1s;
-    -o-transition: all 0.2s linear, 1s;
-    -ms-transition: all 0.2s linear, 1s;
-    -transition: all 0.2s linear, 1s;
-}
-
-.items .item{
-    position: relative;
-    display: block;
-    overflow: hidden;
-}
-
-.items .icons{
-    position: absolute;
-    width: 90px;
-    height: 40px;
-    left: 50%;
-    top: 50%;
-    margin: -20px auto 0 -47px;
-    text-align: center;
-    z-index: 3;
-}
-
-.items .icons i{
-    color: #fff;
-    font-size: 20px;
-    margin-top: 9px;
-}
-
-.items a{
-    width: 40px;
-    height: 40px;
-    background-color: #607D8B;
-    position: relative;
-    display: inline-block;
-
-    -webkit-transition: all 0.2s linear, 0.2s;
-    -moz-transition: all 0.2s linear, 0.2s;
-    -o-transition: all 0.2s linear, 0.2s;
-    -ms-transition: all 0.2s linear, 0.2s;
-    -transition: all 0.2s linear, 0.2s;
-}
-
-.items .imageOverlay{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: 0;
-    
-    -webkit-transition: all 0.2s linear, 1s;
-    -moz-transition: all 0.2s linear, 1s;
-    -o-transition: all 0.2s linear, 1s;
-    -ms-transition: all 0.2s linear, 1s;
-    -transition: all 0.2s linear, 1s;
-}
-
-.items .item:hover .imageOverlay{
-    opacity: 1;
-}
-
-.items .openButton{
+.span4 .img-drumKit{
     float: left;
-    left: -200px;
+    height: 458px;
+    margin-right: 20px;
+    width: 800px;
+    margin-bottom: 20px;
 }
 
-.items .projectLink{
-    float: right;
-    right: -200px;
+.span4 .details{
+    display: inline-block;
+    color: #607D8B;
+    font-size: 18px;
+    border: 1px solid #607D8B;
+    border-radius: 2px;
+    background: transparent;
+    padding: 5px 3px;
 }
 
-.items .item:hover .openButton{
-    left: 0px;
+.span4 .details:hover{
+    text-decoration: none;
+    color: #fff;
+    background-color: #607D8B;
+    font-weight: 400;
 }
 
-.items .item:hover .projectLink{
-    right: 0px;
-}
+.projectBtn {
+    display: inline-block;
+    color: #607D8B;
+    font-size: 18px;
+    border: 1px solid #607D8B;
+    border-radius: 2px;
+    background: transparent;
+    padding: 5px 3px;
+  }
 
-.items .item:hover img{
-    -webkit-transform: scale(1.05, 1.05);
-    -moz-transform: scale(1.05, 1.05);
-    -o-transform: scale(1.05, 1.05);
-    -ms-transform: scale(1.05, 1.05);
-    -transform: scale(1.05, 1.05);
-}
-
-.items{
-    padding: 0;
+  .projectBtn:hover{
+    text-decoration: none;
+    color: #fff;
+    background-color: #607D8B;
+    font-weight: 400;
 }
 
 /* copyright page styles */
