--- a/styles/stylesCv.css
+++ b/styles/stylesCv.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width:620px) {
+    /* For mobile phones: */
+    * {
+      width:100%;
+    }
+  }
+
 html {
     background-color: rgba(96, 125, 139, 0.5);
     height: 150px;
