--- a/styles/style.css
+++ b/styles/style.css
@@ -373,3 +373,9 @@ form #submit:hover{
 .copyrightSection p{
     margin: 0;
 }
+
+@media only screen and (max-width:620px) {
+    /* For mobile phones: */
+    * {
+      width:100%;
+    }
